Tools/DumpRenderTree/mac/LayoutTestControllerMac.mm
@@ -1170,11 +1170,6 @@ void LayoutTestController::focusWebView()
     [[[mainFrame webView] window] makeFirstResponder:[mainFrame webView]];
 }
 
-void LayoutTestController::setBackingScaleFactor(double backingScaleFactor)
-{
-    [[mainFrame webView] _setCustomBackingScaleFactor:backingScaleFactor];
-}
-
 void LayoutTestController::simulateDesktopNotificationClick(JSStringRef title)
 {
     // FIXME: Implement.
