Tools/DumpRenderTree/win/LayoutTestControllerWin.cpp
@@ -1450,10 +1450,6 @@ void LayoutTestController::focusWebView()
 {
 }
 
-void LayoutTestController::setBackingScaleFactor(double)
-{
-}
-
 void LayoutTestController::simulateDesktopNotificationClick(JSStringRef title)
 {
     // FIXME: Implement.
