Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.h
@@ -86,7 +86,6 @@ public:
     void postAddChromeInputField();
     void postRemoveChromeInputField();
     void postFocusWebView();
-    void postSetBackingScaleFactor(double);
     void postSetWindowIsKey(bool);
 
 private:
